# Hackotberfest2024

./: Armstrong_number.java  CONTRIBUTING.md  Calculator.java  Chess  Fibonacci.java  Guess the number.py  IssueTracker.html  README.md  TicTacToe,java  guessing_the_number.c  index.html  richie.txt  sjf.c  snake_game.cpp  text_game_adventure.py
2048/: app.js  index.html  style.css
A real time rock paper scissor game ML/: Approach.md  LICENCE  README.md  RPS.py  RPS_game.py  Rock-paper-scissors.code-workspace  gitpod.yml  main.py  pyproject.toml  rock.paper.scissor.game.py  test_module.py
AIRLINE SYSTEM USING JAVA/: .gitignore  build.xml
AI_Detective_Game/: ai_detective_game.py
Alarm Clock/: index.html  script.js  style.css
Alarm-Clock/: Alarm.clock.py  index.html  style.css
Amazon product availability checker/: Sample Output.md  azp.py  required modules.md
Android-System-/: style.css  style.css.map  style.scss
BMI calculator/: index.html  main.css  script.js
BirthdayGreeting/: settings.gradle
C++_calculator/: README.md  calculator.cpp
CPP/: Hollowdiamond.cpp
Cafe Landing Page/: index.html  style.css
Calculator-Js/: index.html
Card-Game/: index.html  script.js
Chatplatform/: README.md  index.js  package-lock.json  package.json
Color-flipper/: README.md  hex.html  hex.js  index.html  script.js  style.css
Contest-reminder/: index.htm
Crypto/: BlackiqCryption.py  coding.py
CryptoApp/: index.html  index.js  style.css
Dice_Game/: DiceJS.js  DiceStyle.css  RollingDiceGame.html
Dynamic_calendar/: index.html  script.js  style.css
Full_shooting_game/: index.html
Grade & Simple-Calculator/: home.js  index.html  sty.css
Grade-Calc/: dinner.menu.py  home.js  index.html  sty.css  volume.generator.py
Guess the number/: index.html  number.guessing.game.py  script.js  style.css
Guess the word game/: Main.java
HTML Website/: simpleweb.html
HTML-TRICKS/: README.md
HTML_BORDER/: index.css  index.html
Hamburger-menu-animation/: index.html  style.css
Hiding_content/: index.css  index.html  index.js
HotelBooking/: Home.jsx  Hotel.jsx  List.jsx  home.css  hotel.css  index.html  list.css  login.css  useFetch.js
Learn_HTML_CSS/: index.css  index.html  index.js
Login Page/: index.html  style.css
MausamLabs/: README.md  index.html  index1.html  main.js  manifest.json  scripts.js  styles.css  sw.js
NumberGuessGame/: index.html  script.js  style.css
Online-HTML-CSS-Code-Editor/: app.js  index.html  main.css
Othello/: index.html
Python Calculator/: simpleCalc.py
QuizApp/: index.html  pop.quiz.py  script.js
Racing-Game/: index.html  main.js  style.css
Random Joke Generator/: index.html  index.js  style.css
Stopwatch/: main.css  (+1 more)
(+213 files in other folders)
